--- a/Unity/spacejam/Assembly-CSharp.csproj
+++ b/Unity/spacejam/Assembly-CSharp.csproj
@@ -62,6 +62,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Assets\Scripts\CameraControls.cs" />
     <Compile Include="Assets\Scripts\ClickToPlace.cs" />
     <Compile Include="Assets\Scripts\OrbitalPhysics.cs" />
     <Reference Include="Unity.Timeline.Editor">
